# fuzzysearch-web

./: .drone.yml  Cargo.toml  LICENSE.txt  README.md  bootstrap.js  package.json  webpack.config.js
src/: app.rs  lib.rs
src/agents/: event_bus.rs  hasher.rs  mod.rs
src/components/: image_hash.rs  image_preview.rs  mod.rs  navbar.rs  result.rs
src/services/: fuzzysearch.rs  mod.rs
src/views/: index.rs  mod.rs  results.rs
static/: index.html
