[package]
name = "fuzzysearch-web"
version = "0.1.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wee_alloc = "0.4"
anyhow = "1"

yew = { git = "https://github.com/yewstack/yew" }
yew-router = { git = "https://github.com/yewstack/yew" }
js-sys = "0.3"

img_hash = { git = "https://github.com/CryZe/img_hash.git", rev = "ad2459319aab559caea969fcc7c45ab667837d8a" }
image = { version = "0.23", default-features = false, features = ["jpeg", "png", "webp"] }

wasm-logger = "0.2"
log = "0.4"

serde = { version = "1", features = ["derive"] }
hamming = "0.1"
